# gof-rs

./: .gitignore  Cargo.toml  License.txt  README.md  debug.txt
presets/: README.md  achimsp144.txt  debug.txt  glider.txt  lexicon_stripped.txt  newfiles.py  pairs.txt  pattern2.txt  patterns-striped.txt  patterns.txt
presets/demo/: txt1.txt
presets/dir/: filter.sh  force42Height.py
presets/dir/newpatterns/: pattern10.txt  pattern106.txt  pattern107.txt  pattern110.txt  pattern112.txt  pattern113.txt  pattern118.txt  pattern120.txt  pattern124.txt  pattern127.txt  pattern131.txt  pattern133.txt  pattern134.txt  pattern136.txt  pattern138.txt  pattern148.txt  pattern15.txt  pattern150.txt  pattern152.txt  pattern153.txt  pattern159.txt  pattern164.txt  pattern165.txt  pattern170.txt  pattern176.txt  pattern177.txt  pattern179.txt  pattern180.txt  pattern181.txt  pattern183.txt  (+172 more)
presets/lexicon/: new.txt  pattern1.txt  pattern3.txt
presets/patterns/: pattern1.txt  pattern10.txt  pattern100.txt  pattern101.txt  pattern102.txt  pattern103.txt  pattern104.txt  pattern105.txt  pattern106.txt  pattern107.txt  pattern108.txt  pattern109.txt  pattern11.txt  pattern110.txt  pattern111.txt  pattern112.txt  pattern113.txt  pattern114.txt  pattern115.txt  pattern116.txt  pattern117.txt  pattern118.txt  pattern119.txt  pattern12.txt  pattern120.txt  pattern121.txt  pattern122.txt  pattern123.txt  pattern124.txt  pattern125.txt  pattern126.txt  pattern127.txt  pattern128.txt  pattern129.txt  pattern13.txt  pattern130.txt  pattern131.txt  pattern132.txt  pattern133.txt  pattern134.txt  (+455 more)
presets/scripts/: addtworows.sh  force42Height.py  lines.py  newfiles.py  parse.py  parse_lexicon.py  pat.txt  patterns.json
src/: debug.txt  gameloop.rs  generation.rs  main.rs  patterns.rs  ui.rs
(+511 files in other folders)
