[package]
name = "gof-rs"
version = "0.1.0"
license = "MIT"
authors = ["Omar Magdy <omar.professional8777@gmai.com>"]
description = "Game of life in your terminal with over 500 uniquer patterns to choose from."
repository = "https://github.com/omagdy7/gof-rs"
keywords = ["cli", "game-of-life"]
edition = "2021"
include = ["/src", "/presets/"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored = "2.0.0"
crossterm = "0.25.0"
rand = "0.8.5"
tui = "0.19.0"

