[package]
name = "gof-rs"
version = "0.2.3"
license = "MIT"
authors = ["Omar Magdy <omar.professional8777@gmai.com>"]
description = "Game of life in your terminal with over 500 unique patterns to choose from."
repository = "https://github.com/omagdy7/gof-rs"
keywords = ["cli", "game-of-life"]
edition = "2021"
include = ["src/", "presets/patterns/*.txt"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored = "2.0.0"
crossterm = "0.25.0"
include_dir = "0.7.3"
rand = "0.8.5"
tui = "0.19.0"

